--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://use.fontawesome.com/90b7afbbfa.js"></script>
+
     <title>Camper Leaderboard</title>
   </head>
   <body>
